...
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />



            <fragment
                android:id="@+id/recycler_view"
                android:name="com.openclassrooms.mareu.app.ui.ListReunionFragment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
...

    </ScrollView>



    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/reunions_fab_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin"
        android:layout_marginBottom="@dimen/margin"
        android:clickable="true"
        android:src="@drawable/ic_baseline_add_24"
...
