<resources>
    <string name="app_name">Ma reu</string>
    <string name="reunion">Reunion</string>
    <string name="reunion_subject">Reunion subject</string>
    <string name="error_empty_subject">Error: subject field is empty.</string>
    <string name="today">Today</string>
    <string name="date">Date</string>
    <string name="start_date">Start date</string>
    <string name="start_time">Start time</string>
    <string name="start">Start</string>
    <string name="end_date">End date</string>
    <string name="end_time">End time</string>
    <string name="end">End</string>
    <string name="select_date">Select date</string>
    <string name="select_start_date">Select start date</string>
    <string name="select_end_date">Select end date</string>
    <string name="select_start_time">Select start time</string>
    <string name="select_end_time">Select end time</string>
    <string name="select_participants">Select participants</string>
    <string name="error_generic_message">This is an error message.</string>
    <string name="error_no_date_selected">Error: no date selected.</string>
    <string name="error_passed_start_date">Error: start date has passed over.</string>
    <string name="error_invalid_end_date">Error: invalid end date.</string>
    <string name="error_passed_start_time">Error: start time has passed over.</string>
    <string name="error_invalid_end_time">Error: invalid end time.</string>
    <string name="error_no_start_time_selected">Error: no start time selected.</string>
    <string name="error_no_end_time_selected">Error: no end time selected.</string>
    <string name="error_passed_dates">Error: dates have passed over.</string>
    <string name="reserve">Reserve</string>
    <string name="error_no_reservation">Error: no reservation is done.</string>
    <string name="success">Success</string>
    <string name="search">Search</string>
    <string name="list">List</string>
    <string name="search_by_place">Search by place</string>
    <string name="search_by_date">Search by date</string>
    <string name="place">Place</string>
    <string name="error_no_place_available">Error: no place available at this time.</string>
    <string name="error_no_place_selected">Error: place cannot be selected.</string>
    <string name="participants">Participants</string>
    <string name="participant">Participant</string>
    <string name="error_unavailable_participants">Error: unavailable participants at this time.</string>
    <string name="available">Available</string>
    <string name="unavailable">Unavailable</string>
    <string name="error_no_participant_selected">Error: participant cannot be selected.</string>
    <string name="done">Done</string>
    <string name="cancel">Cancel</string>
    <string name="OK">OK</string>
    <string name="clear">Clear</string>
    <string name="save">Save</string>
    <string name="error_null_reunion">Error: Reunion is null</string>
</resources>