<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/margin">

    <fragment
        android:id="@+id/place_spinner_fragment"
        android:name="com.openclassrooms.mareu.app.ui.PlaceSpinnerFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/reunion_participants_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin"
        android:layout_marginVertical="@dimen/margin_half"
        app:layout_constraintTop_toBottomOf="@+id/place_spinner_fragment">

        <androidx.appcompat.widget.AppCompatAutoCompleteTextView
            android:id="@+id/reunion_participants_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/participants"
            android:clickable="true"
            android:focusable="false"/>

    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>